[tool.poetry]
name = "peoplemanager"
version = "0.1.0"
description = "Tkinter-приложение для управления списком людей"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
# Задаём минимальную Python-версию, совместимую с вашим кодом
# (например, если вы используете typing-аннотации List[int], 3.8+ достаточно)


[tool.poetry.dependencies]
# Здесь только внешние пакеты, что не входят в stdlib
pandas = "^2.0"
python = "^3.12"
pyarrow = "^20.0.0"

[tool.poetry.group.dev.dependencies]
black         = "^25.1.0"
isort         = "^6.0.1"
mypy          = "^1.15.0"
pytest        = "^8.3.5"
pre-commit    = "^4.2.0"

[tool.poetry.scripts]
peoplemanager = "people_manager:main"

[build-system]
requires    = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
select      = ["E", "F", "I", "B", "BLK"]
line-length = 88

[tool.mypy]
strict = true
